# GitGrid

./: .gitignore  README.md  pyproject.toml
src/gitgrid/: __init__.py  app.py
