[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "gitgrid"
version = "0.1.0"
description = "递归管理当前目录下所有 Git 子仓库状态的 TUI 工具"
readme = "README.md"
requires-python = ">=3.8"
license = { text = "MIT" }
authors = [{ name = "kent" }]
keywords = ["git", "tui", "textual", "monorepo", "multi-repo"]
dependencies = [
    "textual>=0.40",
]

[project.urls]
Homepage = "https://github.com/kent/GitGrid"

[project.scripts]
gitgrid = "gitgrid.app:main"

[tool.setuptools.packages.find]
where = ["src"]
